WARNING! Uncomment this line for Java 9 and Java 10 in project.clj file: